--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en" class="dark">
   <head>
     <title>Asteroid</title>
-    <meta charset="utf-8" content="Find the Supplements you're looking for" />
-
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Find the Supplements you're looking for"
+    />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href="/favicon.png" />
